# balatro

./: .gitignore  Cargo.toml  build.sh  card.lua  challenges.lua  game.lua  globals.lua  resources  tag.lua
.cargo/: config.toml
balatro-source-code/: blind.lua  cardarea.lua  main.lua  version.jkr
balatro-source-code/engine/: moveable.lua  sprite.lua  ui.lua
balatro-source-code/functions/: UI_definitions.lua  button_callbacks.lua  misc_functions.lua  state_events.lua
balatro-source-code/localization/: es_ES.lua  ja.lua  nl.lua
balatro-source-code/resources/shaders/: splash.fs
bevy_balatro/: Cargo.toml
bevy_balatro/src/: card.rs  game_state.rs  hand_evaluation.rs
engine/: controller.lua  text.lua
functions/: common_events.lua
localization/: de.lua  es_419.lua  id.lua  it.lua  ko.lua  pl.lua  pt_BR.lua  ru.lua  zh_CN.lua  zh_TW.lua
resources/shaders/: CRT.fs  background.fs  booster.fs  dissolve.fs  foil_card.wgsl  holo_card.wgsl
src/: animation.rs  audio.rs  blinds.rs  card_shader.rs  cards.rs  consumables.rs  deck.rs  game_data.rs  game_state.rs  hand_eval.rs  jokers.rs  localization.rs  main.rs  save.rs  scoring.rs  shop.rs  textures.rs
src/ui/: blind_select.rs  game_ui.rs  help_screen.rs  main_menu.rs  mod.rs  shop_ui.rs
