[package]
name = "balatro"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "balatro"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15", default-features = true }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
