[package]
name = "balatro"
version = "0.1.0"
edition = "2021"
description = "Balatro card game rewritten in Rust using Bevy 0.18.1"

[dependencies]
bevy = "0.18.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
