[package]
name = "bevy_balatro"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bevy_balatro"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_sprite",
    "default_font",
    "png",
    "ogg",
    "x11",
    "wayland",
    "multi_threaded",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
